# duna-cloud-tools

./: CMakeLists.txt
dataset/: icpList.csv  keypoints.pcd  keypoints_from_indices.pcd  xsens_compass_0.csv  xsens_compass_1.csv  xsens_compass_10.csv  xsens_compass_11.csv  xsens_compass_12.csv  xsens_compass_13.csv  xsens_compass_14.csv  xsens_compass_15.csv  xsens_compass_16.csv  xsens_compass_17.csv  xsens_compass_18.csv  xsens_compass_19.csv  xsens_compass_2.csv  xsens_compass_20.csv  xsens_compass_21.csv  xsens_compass_22.csv  xsens_compass_23.csv  xsens_compass_24.csv  xsens_compass_25.csv  xsens_compass_26.csv  xsens_compass_27.csv  xsens_compass_28.csv  xsens_compass_29.csv  xsens_compass_3.csv  xsens_compass_30.csv  xsens_compass_31.csv  xsens_compass_32.csv  xsens_compass_33.csv  xsens_compass_34.csv  xsens_compass_35.csv  xsens_compass_36.csv  xsens_compass_37.csv  xsens_compass_38.csv  xsens_compass_39.csv  xsens_compass_4.csv  xsens_compass_40.csv  xsens_compass_41.csv  (+97 more)
include/: global_registration.h
lib/: global_registration.cpp
src/: keypoint_registration.cpp
